tests/mypy/mypy_wrap_function_wrapper_t7.out
tests/mypy/mypy_wrap_function_wrapper_t7.py:29: error: Need type annotation for "wrapped_function"  [var-annotated]
tests/mypy/mypy_wrap_function_wrapper_t7.py:29: error: Argument 3 to "wrap_function_wrapper" has incompatible type "Callable[[str, Any, tuple[Any, ...], dict[str, Any]], str]"; expected "Callable[[Callable[[VarArg(Never), KwArg(Never)], Never], Any, tuple[Any, ...], dict[str, Any]], Any]"  [arg-type]
Found 2 errors in 1 file (checked 1 source file)
